apps/navidrome/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/name: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - name: http
              containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-music
