apps/navidrome/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - name: http
      port: 4533
      targetPort: http
