apps/navidrome/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Navidrome"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "navidrome"
    gethomepage.dev/description: "Music Server"
    gethomepage.dev/href: "https://music.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`music.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: navidrome
          namespace: navidrome
          port: 4533
  tls:
    secretName: production-cyphers-app-tls
